Removed Sequence class hierarchy and other various Maxine-specific utilities that were redundant with JDK functionality.
Shortened some generic type parameters (e.g. 'Element_Type' -> 'T').

Moved StaticLoophole and other utility methods to com.sun.max.Utils.